[package]
name = "actix-async"
version = "0.1.0"
authors = ["fakeshadow <24548779@qq.com>"]
edition = "2018"

[features]
default = ["actix-rt"]

[[example]]
name = "benchmark"
path = "./examples/benchmark.rs"

[[example]]
name = "concurrency"
path = "./examples/concurrency.rs"

[[example]]
name = "closure"
path = "./examples/closure.rs"

[dependencies]
cache-padded = "1.1.1"
futures-core = { version = "0.3.8", default-features = false }
pin-project-lite = "0.2"
spin = "0.7.0"

actix-rt = { git = "https://github.com/fakeshadow/actix-net.git", branch = "mio-0.7.3", optional = true }

[dev-dependencies]
actix = "0.10.0"
async-std = { version = "1.7.0", features = ["attributes", "unstable"] }
async-trait = "0.1.42"
futures-util = { version = "0.3.8", default-features = false, features = ["alloc"] }
tokio = { version = "0.3.4", features = ["full"] }
tokio02 = { package = "tokio", version = "0.2.23", features = ["full"] }
