[package]
name = "actix-async"
version = "0.1.0"
authors = ["fakeshadow <24548779@qq.com>"]
edition = "2018"

[features]
default = ["actix-rt"]

[[example]]
name = "benchmark"
path = "./examples/benchmark.rs"

[[example]]
name = "concurrency"
path = "./examples/concurrency.rs"

[[example]]
name = "closure"
path = "./examples/closure.rs"

[dependencies]
cache-padded = "1.1.1"
futures-core = { version = "0.3.8", default-features = false }
pin-project-lite = "0.2"
spin = "0.7.0"

actix-rt = { version = "2", default-features = false, optional = true }

[dev-dependencies]
#actix = { git = "https://github.com/actix/actix.git", branch = "atomic-unsafe" }
actix-rt = { version = "2" }
async-std = { version = "1.7.0", features = ["attributes", "unstable"] }
async-trait = "0.1.42"
doc-comment = "0.3.3"
futures-util = { version = "0.3.8", default-features = false, features = ["alloc"] }
futures-intrusive = { version = "^0.4", default-features = false }
tokio = { version = "1", features = ["full"] }
