[package]
name = "actix-async"
version = "0.1.0"
authors = ["fakeshadow <24548779@qq.com>"]
edition = "2018"

[[example]]
name = "io-uring"
path = "./examples/io-uring.rs"
required-features = ["tokio-uring"]

[features]
default = ["macros", "tokio-rt"]
macros = ["actix-async-codegen", "async-trait"]
tokio-rt = ["std", "tokio/macros", "tokio/rt", "tokio/sync", "tokio/time"]
std = []

[dependencies]
cache-padded = "1.1.1"
futures-core = { version = "0.3", default-features = false, features = ["alloc"] }
pin-project-lite = "0.2.6"
slab = { version = "0.4.3", default-features = false }

# TODO: make spin optional dep.
spin = { version = "0.9.0", default-features = false, features = ["use_ticket_mutex"] }

# proc macro support
actix-async-codegen = { version = "0.1", optional = true }
async-trait = { version = "0.1.42", optional = true }

# tokio runtime support
tokio = { version = "1.8.1", optional = true }

# tokio-uring for example
tokio-uring = { version = "0.1", optional = true }

[dev-dependencies]
actix = { version = "0.12", default-features = false }
async-std = { version = "1.7.0", features = ["attributes", "unstable"] }
doc-comment = "0.3.3"
futures-util = { version = "0.3.8", default-features = false, features = ["alloc"] }
futures-intrusive = { version = "^0.4", default-features = false }
tokio = { version = "1.7.1", features = ["full"] }